--- a/src/WMS_AddPlant.form
+++ b/src/WMS_AddPlant.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="WMS_AddPlant">
-  <grid id="27dc6" binding="WMS_AddPlant" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="WMS_AddPlant" layout-manager="GridLayoutManager" row-count="7" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
@@ -8,15 +8,15 @@
     <properties/>
     <border type="none"/>
     <children>
-      <component id="54eb1" class="javax.swing.JLabel">
+      <component id="54eb1" class="javax.swing.JLabel" binding="plantNameLbl">
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Label"/>
+          <text value="Plant Name:"/>
         </properties>
       </component>
-      <component id="ce912" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+      <component id="ce912" class="javax.swing.JTextField" binding="plantNameTb">
         <constraints>
           <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -24,15 +24,15 @@
         </constraints>
         <properties/>
       </component>
-      <component id="9edb2" class="javax.swing.JLabel">
+      <component id="9edb2" class="javax.swing.JLabel" binding="plantAddresslbl">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Label"/>
+          <text value="Plant Address"/>
         </properties>
       </component>
-      <component id="db776" class="javax.swing.JTextField" binding="textField2" default-binding="true">
+      <component id="db776" class="javax.swing.JTextField" binding="plantAddressTb">
         <constraints>
           <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -40,15 +40,15 @@
         </constraints>
         <properties/>
       </component>
-      <component id="cff7e" class="javax.swing.JLabel">
+      <component id="cff7e" class="javax.swing.JLabel" binding="revenueLbl">
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Label"/>
+          <text value="Revenue:"/>
         </properties>
       </component>
-      <component id="835" class="javax.swing.JTextField" binding="textField3" default-binding="true">
+      <component id="835" class="javax.swing.JTextField" binding="revenueTb">
         <constraints>
           <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -56,15 +56,15 @@
         </constraints>
         <properties/>
       </component>
-      <component id="f307b" class="javax.swing.JLabel">
+      <component id="f307b" class="javax.swing.JLabel" binding="costLbl">
         <constraints>
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Label"/>
+          <text value="Cost"/>
         </properties>
       </component>
-      <component id="8471f" class="javax.swing.JTextField" binding="textField4" default-binding="true">
+      <component id="8471f" class="javax.swing.JTextField" binding="costTb">
         <constraints>
           <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -82,21 +82,29 @@
           <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <vspacer id="e86cd">
-        <constraints>
-          <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
-            <minimum-size width="-1" height="60"/>
-            <preferred-size width="-1" height="60"/>
-            <maximum-size width="-1" height="60"/>
-          </grid>
-        </constraints>
-      </vspacer>
       <vspacer id="3ff23">
         <constraints>
           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
-            <minimum-size width="-1" height="60"/>
-            <preferred-size width="-1" height="60"/>
-            <maximum-size width="-1" height="60"/>
+            <minimum-size width="60" height="60"/>
+            <preferred-size width="60" height="60"/>
+            <maximum-size width="60" height="60"/>
+          </grid>
+        </constraints>
+      </vspacer>
+      <component id="b148c" class="javax.swing.JButton" binding="addBtn">
+        <constraints>
+          <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Add"/>
+        </properties>
+      </component>
+      <vspacer id="43cf8">
+        <constraints>
+          <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+            <minimum-size width="60" height="60"/>
+            <preferred-size width="60" height="60"/>
+            <maximum-size width="60" height="60"/>
           </grid>
         </constraints>
       </vspacer>
