--- a/src/WMS_AddPlant.form
+++ b/src/WMS_AddPlant.form
@@ -24,7 +24,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="9edb2" class="javax.swing.JLabel" binding="plantAddresslbl">
+      <component id="9edb2" class="javax.swing.JLabel" binding="plantAddressLbl">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
